@@ -314,6 +314,11 @@ class LiteralIncludeReader(object):
                             self.lineno_start += lineno
 
                         return lines[lineno:]
+            else:
+                if inclusive is True:
+                    raise ValueError('start-after pattern not found: %s' % start)
+                else:
+                    raise ValueError('start-at pattern not found: %s' % start)
 
         return lines
 
@@ -338,6 +343,11 @@ class LiteralIncludeReader(object):
                             return []
                         else:
                             return lines[:lineno]
+            else:
+                if inclusive is True:
+                    raise ValueError('end-at pattern not found: %s' % end)
+                else:
+                    raise ValueError('end-before pattern not found: %s' % end)
 
         return lines
 
